# ladr-english

./: .gitignore  LICENSE  README.md
backend/: .env.example  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  db.py  main.py  models.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  exceptions.py  middleware.py  security.py  supabase_client.py
backend/app/repositories/: base.py
backend/app/routers/: auth.py  words.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: user_service.py
backend/app/utils/: logger.py  validators.py
backend/data/: words.db
backend/design/: schema.md  v1.md
backend/docker/: Dockerfile  Dockerfile.dev
backend/docker/nginx/: nginx.conf
backend/docs/: api.md  deployment.md  development.md
backend/requirements/: base.txt  dev.txt
backend/scripts/: deploy.sh  migrate.sh  start.sh
backend/tests/: test_auth.py  test_config.py  test_e2e_auth.py  test_edge_function.py  test_supabase_connection.py  test_words.py
gen-audio/: deploy-output.ps1  main.py  test_silence.py
obsidian-word-gpt/: api.md  esbuild.config.mjs  feature-20251112-login.md  jest.config.js  manifest.json  package-lock.json  package.json  test-api.js  tsconfig.json
obsidian-word-gpt/src/: api.ts  logger.ts  main.ts  settings.ts
obsidian-word-gpt/src/views/: sample_view.ts  word_gpt_vewi.ts
obsidian-word-gpt/tests/: api.test.ts
(+2 files in other folders)
